# novels-heaven

./: .gitignore  LICENSE.txt  README.md
Lightnovels/www-novelhall-com/I Became An Immortal On Mortal Realm/: meta.json
Lightnovels/www-novelhall-com/I Became An Immortal On Mortal Realm/epub/: I Became An Immortal On Mortal Realm c1-495.epub
Lightnovels/www-novelhall-com/Invincible Divine Dragon S Cultivation System/: meta.json
Lightnovels/www-novelhall-com/My Brother S The Protagonist Good Thing I Awakened/: meta.json
Lightnovels/www-novelhall-com/My Life Can Be Infinitely Simulated/: meta.json
Lightnovels/www-novelhall-com/The Big Shot S Movie Star Wife Is Beautiful And/: meta.json
Lightnovels/www-novelhall-com/The Lucky Star Blessing The Whole Village/: meta.json
frons/: package-lock.json  package.json
frons/src/: App.jsx  App.module.css
frons/src/components/: cardcomponent.jsx  cardcomponent.module.css  navbar.jsx  navbar.module.css  updatednovel.css  updatednovel.jsx
frons/src/pages/: HomePage.jsx  LogIn.jsx  NovelsPage.jsx  SearchPage.jsx  SignIn.jsx  UpdatedNovelsPage.jsx  chapterpage.css  chapterpage.jsx  homepage.css  notfoundpage.jsx  novellist.css  novellist.jsx  novelspage.css  searchpage.css
postica/: .flaskenv  README.md  pyproject.toml
postica/migrations/versions/: 045ea204aa1b_initialized_all_schemas_and_populate_.py  107c8fa32d58_add_date_modified_to_novelchapters.py  831a9ba297d5_increased_limit_on_string.py
postica/postica/: pyproject.toml
postica/src/postica/: app.py  config.py  model.py
postica/src/postica/crawler_scripts/: hi.py  sjks88.py
postica/src/postica/env_templates/: .env.sample
postica/src/postica/helpers/: modifytime.py
postica/src/postica/utils/: epub_reader.py
(+7770 files in other folders)
