[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postica"
dynamic = ["version"]
description = 'This is a Backend Microservice built for novels-heaven'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Deepak Sanjay S J", email = "deepaksanjaysj@gmail.com" },
  { name = "Ajey presand", email = "authortwo@example.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Framework :: Celery",
  "Framework :: Flask",
  "Framework :: Hatch",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/DeepakSan/novels-heaven/blob/main/README.md"
Issues = "https://github.com/DeepakSan/novels-heaven/issues"
Source = "https://github.com/DeepakSan/novels-heaven"

[tool.hatch.version]
path = "src/postica/__about__.py"

[tool.hatch.envs.dev]
extra-dependencies = []

[tool.hatch.envs.dev.scripts]
build = 

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/postica tests}"

[tool.coverage.run]
source_pkgs = ["postica", "tests"]
branch = true
parallel = true
omit = [
  "src/postica/__about__.py",
]

[tool.coverage.paths]
postica = ["src/postica", "*/postica/src/postica"]
tests = ["tests", "*/postica/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
